<resources>
    <string name="app_name">CT Students</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--  Sign in resources  -->
    <string name="Heading1">CT Students</string>
    <string name="Heading2">Community</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter password</string>
    <string name="recoverPassword">Recover Password</string>
    <string name="signIn">Sign IN</string>
    <string name="OR">or continue with</string>
    <string name="RegisterYourrself">Not a member? Register now</string>
    <string name="SignInWithGoogle">SignIn</string>

    <!--  menu drawer names  -->
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="reminder">Reminder</string>
    <string name="feed">Feed</string>

    <!--  Registration Page  -->

    <string name="registerYourSelf">Register Yourself!</string>
    <string name="enterName">Enter your full name</string>
    <string name="Register">Register now</string>

    <!--  Recover Password -->

    <string name="recoverpassword">Recover your password</string>
    <string name="recover">Recover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom1">Bottom1</string>


    <!--  Home Fragment Strings  -->
    <string name="Marks">Marks calculator</string>
    <string name="cgpa">CGPA</string>
    <string name="assignments">Assignments</string>
    <string name="notes">Notes</string>
    <string name="developer">Developer</string>
    <string name="CTstudent">CT Student</string>
    <string name="community">Community</string>

<!-- Attendance layout   -->

    <string name="AttendanceCal">Attendance \nCalculator</string>
    <string name="theory">Theory attendance</string>


    <!--        <string name="default_web_client_id">531650521291-5p99de8hj7ca2kfksoplf1a66c4t1r6s.apps.googleusercontent.com</string>-->

    <!--  Profiles Fragments   -->

    <string name="StudentName">Student Name</string>
    <string name="StudyProgram">Study Program</string>
    <string name="UniversityRollNo">University RollNo</string>
    <string name="PhoneNo">Phone Number</string>
    <string name="Department">Department</string>
    <string name="DegreeYear">Degree Year</string>
    <string name="StudentEmail">Student Email</string>

<!--  Feed Screen  -->
    <string name="nextNews">Next</string>
    <string name="share">Share</string>

<!--  Feed Item String  -->
    <string name="default_news_title">Title</string>
    <string name="default_news_description">Description</string>
    <string name="default_publisher">Publisher</string>
    <string name="default_author">Author</string>

<!--   Credential Screen -->
    <string name="EnterCredentials">Enter Your Credentials</string>
    <string name="EnterStudyProgram">Study Program</string>
    <string name="EnterUniversityRollNo">Enter Your University roll number</string>
    <string name="EnterPhoneNO">Enter your Phone number</string>
    <string name="EnterDegree">Enter your degree </string>
    <string name="EnterDepaertment">Enter your Department</string>
    <string name="letsGo">Lets! Go</string>




</resources>