<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credentials">

    <TextView
        android:id="@+id/txtEnterCredential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_extrabold"
        android:text="@string/EnterCredentials"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgLogoRegister"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/txtEnterCredential"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_logo" />




    <EditText
        android:id="@+id/txtEnterStudyProgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogoRegister"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sans_font"
        android:hint="@string/EnterStudyProgram"
        android:inputType="text"
        android:lines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtUnversityNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnterStudyProgram"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:hint="@string/EnterUniversityRollNo"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/txtEnterPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUnversityNo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sans_font"
        android:hint="@string/EnterPhoneNO"
        android:inputType="text"
        android:lines="1"
        android:padding="10dp" />


    <EditText
        android:id="@+id/txtEnterDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnterPhoneNo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sans_font"
        android:hint="@string/EnterDepaertment"
        android:inputType="text"
        android:lines="1"
        android:padding="10dp" />
    <EditText
        android:id="@+id/txtEnterDegree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnterDepartment"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sans_font"
        android:hint="@string/EnterPhoneNO"
        android:inputType="text"
        android:lines="1"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLetsGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blueGray"
        android:text="@string/letsGo" />

  </RelativeLayout>