<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/news_layout"
    >


    <ImageView
        android:id="@+id/newsImage"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="2sp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_max="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_max="100sp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newsImage"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/default_news_title"
        android:textAlignment="gravity"
        android:textSize="24sp"
        android:textStyle="bold"
        android:lines="2"
        />

    <TextView
        android:id="@+id/newsDescription"
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newsTitle"
        android:layout_gravity="start"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="3"
        android:text="@string/default_news_description"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintWidth_max="300sp"
        app:layout_constraintWidth_min="160sp"
        android:textStyle="italic"
        android:lines="2"
        />

    <TextView
        android:id="@+id/newsAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newsDescription"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="61dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/default_author"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintWidth_max="200sp"
        app:layout_constraintWidth_min="100sp"
        android:textStyle="bold"
        />
</RelativeLayout>