<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.Home.Home">

    <ImageView
        android:id="@+id/imgHomeLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo" />

    <View
        android:id="@+id/tlThinLine"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/imgHomeLogo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen" />

    <RelativeLayout
        android:id="@+id/layoutAttendence"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tlThinLine"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/BackGroundgray">

        <ImageView
            android:id="@+id/ic_attendence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_attendence" />

        <TextView
            android:id="@+id/txtAttendence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_attendence"
            android:layout_marginTop="20dp"
            android:autoSizeMaxTextSize="80sp"
            android:fontFamily="@font/sans_font"
            android:gravity="bottom"
            android:padding="20dp"
            android:text="@string/Marks"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_feed"
        android:layout_width="180dp"
        android:layout_height="280dp"
        android:layout_below="@id/layoutAttendence"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"

        android:backgroundTint="@color/BackGroundgray">

        <ImageView
            android:id="@+id/ic_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_news_feed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sans_font"
            android:text="@string/feed"
            android:textColor="@color/white"
            android:textSize="27sp"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_cgpa"
        android:layout_width="180dp"
        android:layout_height="280dp"
        android:layout_below="@+id/tlThinLine"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/BackGroundgray">

        <ImageView
            android:id="@+id/ic_cgpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_cgpa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sans_font"
            android:text="@string/cgpa"
            android:textColor="@color/white"
            android:textSize="27sp" />

    </RelativeLayout>


</RelativeLayout>